23.27. Desafio: restringindo acesso dos endpoints de restaurantes